Modification de la page welcome pour voir...

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,3 +3,5 @@
 <p>Find me in app/views/welcome/index.html.erb</p>
 
 <p> Signé : Thibaut</p>
+
+<p>J'ajoute un nouveau paragraphe pour en voir le résultat.</p>
